--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@wdio/local-runner": "^7.2.1",
     "@wdio/spec-reporter": "^7.2.1",
     "@wdio/sync": "^7.2.1",
+    "aws-sdk": "^2.868.0",
     "chromedriver": "^89.0.0",
+    "dotenv": "^8.2.0",
     "wdio-chromedriver-service": "^7.0.0"
   }
 }
